src/test/ui/issues/issue-40782.stderr
error: missing `in` in `for` loop
  --> $DIR/issue-40782.rs:2:10
   |
LL |     for i 0..2 {
   |          ^ help: try adding `in` here

error: aborting due to previous error

